[package]
name = "flying-carpet-core"
version = "8.0.1"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
aes-gcm = "0.10"
rand = "0.8"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
sha2 = { version = "0.10" }
tokio = { version = "1", features = ["full"] }
wifidirect-legacy-ap = "0.4.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.42.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_NetworkManagement_WiFi",
    "Foundation",
    "Foundation_Collections",
    "implement",
    "Devices_Bluetooth",
    "Devices_Bluetooth_Advertisement",
    "Devices_Bluetooth_GenericAttributeProfile",
    "Devices_Enumeration",
    "Storage_Streams",
]
