[package]
name = "flying-carpet"
version = "7.1.0"
description = "Encrypted file transfer over ad hoc WiFi between Android, iOS, Linux, macOS, and Windows"
authors = ["Theron Spiegl"]
license = "BSD-3-clause"
repository = "https://github.com/spieglt/flyingcarpet"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["dialog-all", "os-all", "path-all", "window-all"] }
tokio = { version = "1", features = ["full"] }
flying-carpet-core = { path = "../../core" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
